2002-04-28  Frank Ch. Eigler  <fche@redhat.com>
	* Makefile.am (HOOKOBJS): Add *time related hooks.
	* configure.in: Look for pthreads.h header.
	* mf-hooks.c (asctime, ctime, gmtime, localtime): New wrappers.
	* mf-runtime.c: Begin sketching some pthreads support.
	(__mf_usage): Check for -lpthread presence.
	(__mf_unregister): Confirm matching unregistration base.
	(__mf_find_objects_rec): Reduce unnecessary recursion.
	* mf-runtime.h.in: Add "nothrow" attribute to functions.  Add
	#defines for new hook functions.
	* mf-impl.h: Corresponding changes.
	* config.h.in, configure, Makefile.in: Regenerated.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@66172 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libmudflap/Makefile.am
+++ b/libmudflap/Makefile.am
@@ -51,7 +51,11 @@ HOOKOBJS = \
  rindex-hook.lo \
  mmap-hook.lo \
  munmap-hook.lo \
- alloca-hook.lo
+ alloca-hook.lo \
+ asctime-hook.lo \
+ ctime-hook.lo \
+ gmtime-hook.lo \
+ localtime-hook.lo
 
 #.NOTPARALLEL: # Otherwise the following loop will be executed in parallel!
 $(HOOKOBJS): mf-hooks.c mf-runtime.h mf-impl.h
