--- a/libmudflap/config.h.in
+++ b/libmudflap/config.h.in
@@ -15,6 +15,9 @@
 /* Define if you have the <execinfo.h> header file.  */
 #undef HAVE_EXECINFO_H
 
+/* Define if you have the <pthread.h> header file.  */
+#undef HAVE_PTHREAD_H
+
 /* Define if you have the <signal.h> header file.  */
 #undef HAVE_SIGNAL_H
 
