* loop-prefetch.c: New. 	* Makefile.in (loop-prefetch.o): New. 	* basic-block.h (FOR_BB_INSNS, FOR_BB_INSNS_REVERSE): New. 	* cfgloop.h (struct iv_occurence, iv_occurence_base_class, 	iv_occurence_step_class): New. 	(iv_occurences): Declare. 	(finalize_iv_analysis, analyse_induction_variables): Types changes. 	(iv_emit_insn_before, iv_emit_insn_after, prefetch_loop_arrays): 	Declare. 	* df.c (df_reg_table_realloc, df_link_create, df_insn_refs_record, 	df_bb_luids_set, df_refs_queue, df_refs_process): Export. 	(df_insn_ud_chain_create): Split from df_bb_ud_chain_create. 	* df.h (df_insn_refs_record, df_reg_table_realloc, df_link_create, 	df_insn_ud_chain_create, df_bb_luids_set, df_refs_queue, 	df_refs_process): Declare. 	* loop-iv.c (current_loops): New static variable. 	(iv_occurences): New variable. 	(fill_rd_for_defs, enter_iv_occurence, record_iv_occurences_1, 	record_iv_occurences, dump_iv_occurences, iv_new_insn_changes_commit): 	New static functions. 	(dump_insn_ivs, record_def_value, record_use_value, 	get_def_value, get_use_value, iv_load_used_values, 	compute_reg_values, compute_register_values, 	simplify_register_values, fill_loop_rd_in_for_def, 	compute_loop_end_values, compute_initial_values): Do not test ref 	type unnecesarily.  Use FOR_BB_INSNS. 	(initialize_iv_analysis): Initialize current_loops and 	iv_occurences. 	(finalize_iv_analysis, analyse_induction_variables): Use current_loops 	instead of loops parameter. 	(iv_emit_insn_before, iv_emit_insn_after): New. 	* loop.c (prescan_loop, strength_reduce, check_dbra_loop): Remove 	prefetching references. 	(struct prefetch_info, check_store, rtx_equal_for_prefetch_p, 	emit_prefetch_instructions): Removed. 	* loop.h (LOOP_PREFETCH): Removed. 	(struct loop_info): has_prefetch field removed. 	* toplev.c (rest_of_compilation): Move prefetching to the new loop 	optimizer.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/rtlopt-branch@66461 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -805,7 +805,7 @@ OBJS = alias.o bb-reorder.o bitmap.o builtins.o caller-save.o calls.o	   \
  dwarf2asm.o dwarf2out.o dwarfout.o emit-rtl.o except.o explow.o expmed.o  \
  expr.o final.o flow.o fold-const.o function.o gcse.o gcse-utils.o	   \
  gcse-classic.o gcse-hoist.o gcse-cprop.o gcse-pre.o gcse-store.o	   \
- gcse-null.o gcse.o gcse-utils.o loop-reroll.o				   \
+ gcse-null.o gcse.o gcse-utils.o loop-reroll.o loop-prefetch.o		   \
  genrtl.o ggc-common.o global.o graph.o gtype-desc.o heap.o		   \
  haifa-sched.o hashtable.o hooks.o ifcvt.o insn-attrtab.o insn-emit.o	   \
  insn-extract.o insn-opinit.o insn-output.o insn-peep.o insn-recog.o	   \
@@ -1700,6 +1700,9 @@ loop-unroll.o: loop-unroll.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TM_H) \
 loop-reroll.o: loop-reroll.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TM_H) \
    $(BASIC_BLOCK_H) hard-reg-set.h output.h coretypes.h $(TM_H) \
    cfgloop.h $(EXPR_H)
+loop-prefetch.o: loop-prefetch.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TM_H) \
+   $(BASIC_BLOCK_H) hard-reg-set.h output.h coretypes.h $(TM_H) \
+   cfgloop.h $(RECOG_H) $(EXPR_H) insn-config.h $(OPTABS_H)
 dominance.o : dominance.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H) \
    hard-reg-set.h $(BASIC_BLOCK_H) et-forest.h
 et-forest.o : et-forest.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) et-forest.h alloc-pool.h
