--- a/libbanshee/libcompat/Makefile.am
+++ b/libbanshee/libcompat/Makefile.am
@@ -1,4 +1,4 @@
 AM_CFLAGS = -I$(srcdir)/../engine -I$(srcdir)/../include -I. -Ddeletes= -Dtraditional= -Dsameregion= -Dparentptr= -fno-strict-aliasing
 noinst_LIBRARIES = libbansheecompat.a
-libbansheecompat_a_SOURCES = regions.c
+libbansheecompat_a_SOURCES = regions.c radix-tree.c
 
