--- a/libmudflap/testsuite/Makefile.in
+++ b/libmudflap/testsuite/Makefile.in
@@ -65,19 +65,21 @@ target_alias = @target_alias@
 target_triplet = @target@
 AS = @AS@
 CC = @CC@
+CPP = @CPP@
 CXX = @CXX@
 CXXCPP = @CXXCPP@
 DLLTOOL = @DLLTOOL@
 EXEEXT = @EXEEXT@
 GCJ = @GCJ@
 GCJFLAGS = @GCJFLAGS@
-LIBMUDFLAP_PICFLAGS = @LIBMUDFLAP_PICFLAGS@
+LDD = @LDD@
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
 MAINT = @MAINT@
 MAKEINFO = @MAKEINFO@
 MF_HAVE_STDINT_H = @MF_HAVE_STDINT_H@
 MF_HAVE_UINTPTR_T = @MF_HAVE_UINTPTR_T@
+NM = @NM@
 OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
