--- a/libmudflap/config.h.in
+++ b/libmudflap/config.h.in
@@ -6,6 +6,9 @@
 /* Define if you have the backtrace_symbols function.  */
 #undef HAVE_BACKTRACE_SYMBOLS
 
+/* Define if you have the dlvsym function.  */
+#undef HAVE_DLVSYM
+
 /* Define if you have the gettimeofday function.  */
 #undef HAVE_GETTIMEOFDAY
 
@@ -32,4 +35,7 @@
 
 /* Version number of package */
 #undef VERSION
+
+/* pthread_create symbol version */
+#undef PTHREAD_CREATE_VERSION
 
