2003-05-14  Toon Moene  <toon@moene.indiv.nluug.nl>
	* Makefile.in: Add additional -Wno-error targets for Alpha.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@66810 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -171,21 +171,37 @@ gengtype-lex.o-warn = -Wno-error
 # warnings when converting to GIMPLE form.  The warnings are triggered when
 # the gimplifier re-writes va_start with a temporary instead of using the
 # last named argument of the function.
+alias.o-warn = -Wno-error
 bitmap.o-warn = -Wno-error
+builtins.o-warn = -Wno-error
+caller-save.o-warn = -Wno-error
 combine.o-warn = -Wno-error
+cfgrtl.o-warn = -Wno-error
+cse.o-warn = -Wno-error
 c-semantics.o-warn = -Wno-error
 c-typeck.o-warn = -Wno-error
 dwarf2out.o-warn = -Wno-error
 emit-rtl.o-warn = -Wno-error
 expr.o-warn = -Wno-error
 fold-const.o-warn = -Wno-error
+ifcvt.o-warn = -Wno-error
 genattrtab.o-warn = -Wno-error
+jump.o-warn = -Wno-error
+local-alloc.o-warn = -Wno-error
+ra-build.o-warn = -Wno-error
+simplify-rtx.o-warn = -Wno-error
+sched-vis.o-warn = -Wno-error
+stmt.o-warn = -Wno-error
 reload1.o-warn = -Wno-error
 reload.o-warn = -Wno-error
 rtlanal.o-warn = -Wno-error
 tree.o-warn = -Wno-error
 varasm.o-warn = -Wno-error
+f/com.o-warn = -Wno-error
+f/equiv.o-warn = -Wno-error
 f/expr.o-warn = -Wno-error
+f/intrin.o-warn = -Wno-error
+f/where.o-warn = -Wno-error
 # The warning for 'prev_file_name' in profile.c is odd.  The variable *is*
 # initialized before being used.
 profile.o-warn = -Wno-error
