* Makefile.in (regmove.o-warn): Change to -Wno-error.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@66837 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -192,6 +192,7 @@ ra-build.o-warn = -Wno-error
 simplify-rtx.o-warn = -Wno-error
 sched-vis.o-warn = -Wno-error
 stmt.o-warn = -Wno-error
+regmove.o-warn = -Wno-error
 reload1.o-warn = -Wno-error
 reload.o-warn = -Wno-error
 rtlanal.o-warn = -Wno-error
