* algebraic.c, algebraic.h: New files. 	* Makefile.in (algebraic.o): New. 	(toplev.o, cfgloopanal.o, loop-iv.o): Add algebraic.h dependency. 	* cfgloop.h (iv_interesting_reg): Declare. 	(substitute_into_expr, iv_simplify_subreg, iv_simplify_rtx, 	simplify_iv_using_values, iv_split): Declarations moved to 	algebraic.h. 	(iv_base, iv_step, iv_simple_p): Removed. 	* cfgloopanal.c: Include algebraic.h. 	(iv_simple_condition_p): Call renamed functions from algebraic.h. 	* loop-iv.c: Include algebraic.h. 	(block_dominance_order): New static variable. 	(interesting_reg): Renamed to ... 	(iv_interesting_reg): ... new. 	(iteration_rtx, suitable_code, gen_iteration, straighten_ops, 	sort_ops, iv_compare_rtx, use_distributive_law, iv_simplify_mult, 	combine_constants, iv_simplify_plus, compare_with_mode_bounds, 	iv_simplify_relational): Moved to algebraic.c. 	(simple_expr_p, good_constant_p):  Moved to algebraic.h. 	(expr_mentions_iteration_p, expr_mentions_initial_value_p): 	Merged, renamed to fast_expr_mentions_code_p and moved to algebraic.h. 	(init_suitable_codes): Renamed to init_algebraic and moved to 	algebraic.c. 	(dump_equations, dump_insn_ivs, invariant_wrto_ivs_p, simulate_set, 	simplify_ivs_using_values, iv_simplify_using_initial_values, 	simplify_reg_values, fill_loop_rd_in_for_def, initialize_iv_analysis, 	finalize_iv_analysis, iv_make_initial_value, compute_initial_values, 	record_iv_occurences_1, record_iv_occurences, 	iv_new_insn_changes_commit, analyse_induction_variables): Altered due to 	calls to functions and use of variables with changed names. 	(get_reg_value_at, compute_reg_values, compute_register_values, 	fill_loops_dominance_order): Pass blocks in dominance order to 	avoid recursion. 	* toplev.c: Include algebraic.h. 	(backend_init): Call init_algebraic.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/rtlopt-branch@66915 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -797,8 +797,8 @@ C_OBJS = c-parse.o c-lang.o c-pretty-print.o $(C_AND_OBJC_OBJS)
 
 # Language-independent object files.
 
-OBJS = alias.o bb-reorder.o bitmap.o builtins.o caller-save.o calls.o	   \
- cfg.o cfganal.o cfgbuild.o cfgcleanup.o cfglayout.o cfgloop.o		   \
+OBJS = algebraic.o alias.o bb-reorder.o bitmap.o builtins.o caller-save.o  \
+ calls.o cfg.o cfganal.o cfgbuild.o cfgcleanup.o cfglayout.o cfgloop.o	   \
  cfgloopanal.o cfgloopmanip.o loop-init.o loop-unswitch.o loop-unroll.o	   \
  cfgrtl.o combine.o conflict.o convert.o cse.o cselib.o dbxout.o	   \
  debug.o df.o diagnostic.o dojump.o doloop.o dominance.o loop-iv.o	   \
@@ -1468,7 +1468,7 @@ diagnostic.o : diagnostic.c diagnostic.h real.h diagnostic.def \
    input.h toplev.h intl.h langhooks.h $(LANGHOOKS_DEF_H)
 toplev.o : toplev.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(TREE_H) $(RTL_H) \
    function.h flags.h xcoffout.h input.h $(INSN_ATTR_H) output.h diagnostic.h \
-   debug.h insn-config.h intl.h $(RECOG_H) Makefile toplev.h \
+   debug.h insn-config.h intl.h $(RECOG_H) Makefile toplev.h algebraic.h \
    dwarf2out.h sdbout.h dbxout.h $(EXPR_H) hard-reg-set.h $(BASIC_BLOCK_H) \
    graph.h $(LOOP_H) except.h $(REGS_H) $(TIMEVAR_H) $(lang_options_files) \
    ssa.h $(PARAMS_H) $(TM_P_H) reload.h dwarf2asm.h $(TARGET_H) \
@@ -1681,7 +1681,7 @@ cfgcleanup.o : cfgcleanup.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) \
    $(PARAMS_H)
 cfgloop.o : cfgloop.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) coretypes.h $(TM_H) \
    $(BASIC_BLOCK_H) hard-reg-set.h cfgloop.h flags.h
-cfgloopanal.o : cfgloopanal.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) \
+cfgloopanal.o : cfgloopanal.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) algebraic.h \
    $(BASIC_BLOCK_H) hard-reg-set.h cfgloop.h $(EXPR_H) coretypes.h $(TM_H)
 cfgloopmanip.o : cfgloopmanip.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) \
    $(BASIC_BLOCK_H) hard-reg-set.h cfgloop.h cfglayout.h output.h coretypes.h $(TM_H)
@@ -1693,7 +1693,9 @@ loop-unswitch.o : loop-unswitch.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TM_H) \
    output.h $(EXPR_H) coretypes.h $(TM_H)
 loop-iv.o : loop-iv.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TM_H) \
    $(BASIC_BLOCK_H) hard-reg-set.h cfgloop.h cfglayout.h params.h \
-   output.h $(EXPR_H) coretypes.h $(TM_H) function.h df.h
+   output.h $(EXPR_H) coretypes.h $(TM_H) function.h df.h algebraic.h
+algebraic.o : algebraic.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TM_H) \
+   $(EXPR_H) coretypes.h $(TM_H) algebraic.h sbitmap.h
 loop-unroll.o: loop-unroll.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TM_H) \
    $(BASIC_BLOCK_H) hard-reg-set.h cfgloop.h cfglayout.h params.h \
    output.h $(EXPR_H) coretypes.h $(TM_H)
