Initial support for CLI back-end
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/st@116745 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cli/configure.in
+++ b/cli/configure.in
@@ -518,6 +518,10 @@ case "${target}" in
   c54x*-*-* | tic54x-*-*)
     noconfigdirs="$noconfigdirs target-libstdc++-v3 target-libgloss ${libgcj} gcc gdb newlib"
     ;;
+  cil32-*-*)
+    unsupported_languages="$unsupported_languages ada fortran java"
+    noconfigdirs="$noconfigdirs target-libssp target-libiberty target-libmudflap"
+    ;;
   cris-*-* | crisv32-*-*)
     unsupported_languages="$unsupported_languages java"
     case "${target}" in
