--- a/gcc/lto/Make-lang.in
+++ b/gcc/lto/Make-lang.in
@@ -27,7 +27,7 @@
 LTO_EXE = lto1$(exeext)
 # The LTO-specific object files inclued in $(LTO_EXE).
 LTO_OBJS = lto/lto-lang.o lto/lto.o lto/lto-elf.o lto/lto-symtab.o
-LTO_H = lto/lto.h $(HASHTAB_H)
+LTO_H = lto/lto.h $(HASHTAB_H) $(TREE_H)
 
 ########################################################################
 # Rules
@@ -79,8 +79,8 @@ lto/lto-lang.o: lto/lto-lang.c $(CONFIG_H) coretypes.h debug.h \
 	flags.h $(GGC_H) langhooks.h $(LANGHOOKS_DEF_H) $(SYSTEM_H) \
 	$(TM_H) lto/lto-tree.h $(LTO_H) gtype-lto.h
 lto/lto.o: lto/lto.c $(CONFIG_H) $(CGRAPH_H) coretypes.h dwarf2.h \
-	$(GGC_H) opts.h $(SYSTEM_H) toplev.h $(TREE_H) $(TM_H) $(LTO_H)
+	$(GGC_H) opts.h $(SYSTEM_H) toplev.h $(TM_H) $(LTO_H)
 lto/lto-elf.o: lto/lto-elf.c $(CONFIG_H) coretypes.h $(SYSTEM_H) \
-	toplev.h $(LTO_H)
+	toplev.h $(LTO_H) 
 lto/lto-symtab.o: lto/lto-symtab.c $(CONFIG_H) coretypes.h \
-	$(SYSTEM_H) toplev.h $(TREE_H) $(LTO_H) lto/lto-tree.h
+	$(SYSTEM_H) toplev.h $(LTO_H) lto/lto-tree.h
