--- a/sourcerygxx-4_1/gcc/Makefile.in
+++ b/sourcerygxx-4_1/gcc/Makefile.in
@@ -718,7 +718,7 @@ version     := $(BASEVER_c)
 BASEVER_s   := "\"$(BASEVER_c)\""
 DEVPHASE_s  := "\"$(if $(DEVPHASE_c), ($(DEVPHASE_c)))\""
 DATESTAMP_s := "\"$(if $(DEVPHASE_c), $(DATESTAMP_c))\""
-VERSUFFIX_s := "\"@VERSUFFIX@\""
+PKGVERSION_s:= "\"@PKGVERSION@\""
 BUGURL_s    := "\"@BUGURL@\""
 
 # Shorthand variables for dependency lists.
@@ -1686,7 +1686,7 @@ dumpvers: dumpvers.c
 version.o: version.c version.h $(DATESTAMP) $(BASEVER) $(DEVPHASE)
 	$(CC) $(ALL_CFLAGS) $(ALL_CPPFLAGS) \
 	-DBASEVER=$(BASEVER_s) -DDATESTAMP=$(DATESTAMP_s) \
-	-DDEVPHASE=$(DEVPHASE_s) -DVERSUFFIX=$(VERSUFFIX_s) \
+	-DDEVPHASE=$(DEVPHASE_s) -DPKGVERSION=$(PKGVERSION_s) \
         -DBUGURL=$(BUGURL_s) -c $(srcdir)/version.c $(OUTPUT_OPTION)
 
 gtype-desc.o: gtype-desc.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) \
