--- a/libjava/Makefile.in
+++ b/libjava/Makefile.in
@@ -313,9 +313,10 @@ am__libgcj_la_SOURCES_DIST = prims.cc jni.cc exception.cc \
 	java/util/natResourceBundle.cc java/util/natVMTimeZone.cc \
 	java/util/concurrent/atomic/natAtomicLong.cc \
 	java/util/logging/natLogger.cc java/util/zip/natDeflater.cc \
-	java/util/zip/natInflater.cc sun/misc/natUnsafe.cc boehm.cc \
-	nogc.cc posix.cc win32.cc darwin.cc posix-threads.cc \
-	win32-threads.cc no-threads.cc
+	java/util/zip/natInflater.cc sun/misc/natUnsafe.cc \
+	sun/reflect/natReflection.cc boehm.cc nogc.cc posix.cc \
+	win32.cc darwin.cc posix-threads.cc win32-threads.cc \
+	no-threads.cc
 am__objects_2 = gnu/classpath/natSystemProperties.lo \
 	gnu/gcj/natCore.lo gnu/gcj/convert/JIS0208_to_Unicode.lo \
 	gnu/gcj/convert/JIS0212_to_Unicode.lo \
@@ -367,7 +368,8 @@ am__objects_2 = gnu/classpath/natSystemProperties.lo \
 	java/util/natResourceBundle.lo java/util/natVMTimeZone.lo \
 	java/util/concurrent/atomic/natAtomicLong.lo \
 	java/util/logging/natLogger.lo java/util/zip/natDeflater.lo \
-	java/util/zip/natInflater.lo sun/misc/natUnsafe.lo
+	java/util/zip/natInflater.lo sun/misc/natUnsafe.lo \
+	sun/reflect/natReflection.lo
 @USING_BOEHMGC_TRUE@am__objects_3 = boehm.lo
 @USING_NOGC_TRUE@am__objects_4 = nogc.lo
 @USING_POSIX_PLATFORM_TRUE@am__objects_5 = posix.lo
@@ -7584,7 +7586,8 @@ java/util/concurrent/atomic/natAtomicLong.cc \
 java/util/logging/natLogger.cc \
 java/util/zip/natDeflater.cc \
 java/util/zip/natInflater.cc \
-sun/misc/natUnsafe.cc
+sun/misc/natUnsafe.cc \
+sun/reflect/natReflection.cc
 
 xlib_nat_source_files = \
 gnu/gcj/xlib/natClip.cc \
@@ -8124,6 +8127,14 @@ sun/misc/$(DEPDIR)/$(am__dirstamp):
 	@: > sun/misc/$(DEPDIR)/$(am__dirstamp)
 sun/misc/natUnsafe.lo: sun/misc/$(am__dirstamp) \
 	sun/misc/$(DEPDIR)/$(am__dirstamp)
+sun/reflect/$(am__dirstamp):
+	@$(mkdir_p) sun/reflect
+	@: > sun/reflect/$(am__dirstamp)
+sun/reflect/$(DEPDIR)/$(am__dirstamp):
+	@$(mkdir_p) sun/reflect/$(DEPDIR)
+	@: > sun/reflect/$(DEPDIR)/$(am__dirstamp)
+sun/reflect/natReflection.lo: sun/reflect/$(am__dirstamp) \
+	sun/reflect/$(DEPDIR)/$(am__dirstamp)
 java/lang/Object.lo: java/lang/$(am__dirstamp) \
 	java/lang/$(DEPDIR)/$(am__dirstamp)
 libgcj.la: $(libgcj_la_OBJECTS) $(libgcj_la_DEPENDENCIES) 
@@ -8410,6 +8421,8 @@ mostlyclean-compile:
 	-rm -f java/util/zip/natInflater.lo
 	-rm -f sun/misc/natUnsafe.$(OBJEXT)
 	-rm -f sun/misc/natUnsafe.lo
+	-rm -f sun/reflect/natReflection.$(OBJEXT)
+	-rm -f sun/reflect/natReflection.lo
 
 distclean-compile:
 	-rm -f *.tab.c
@@ -8529,6 +8542,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@java/util/zip/$(DEPDIR)/natDeflater.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@java/util/zip/$(DEPDIR)/natInflater.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@sun/misc/$(DEPDIR)/natUnsafe.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@sun/reflect/$(DEPDIR)/natReflection.Plo@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	depbase=`echo $@ | sed 's|[^/]*$$|$(DEPDIR)/&|;s|\.o$$||'`; \
@@ -8774,6 +8788,7 @@ clean-libtool:
 	-rm -rf java/util/logging/.libs java/util/logging/_libs
 	-rm -rf java/util/zip/.libs java/util/zip/_libs
 	-rm -rf sun/misc/.libs sun/misc/_libs
+	-rm -rf sun/reflect/.libs sun/reflect/_libs
 
 distclean-libtool:
 	-rm -f libtool
@@ -9206,6 +9221,8 @@ distclean-generic:
 	-rm -f java/util/zip/$(am__dirstamp)
 	-rm -f sun/misc/$(DEPDIR)/$(am__dirstamp)
 	-rm -f sun/misc/$(am__dirstamp)
+	-rm -f sun/reflect/$(DEPDIR)/$(am__dirstamp)
+	-rm -f sun/reflect/$(am__dirstamp)
 	-test -z "$(DISTCLEANFILES)" || rm -f $(DISTCLEANFILES)
 
 maintainer-clean-generic:
@@ -9220,7 +9237,7 @@ clean-am: clean-binPROGRAMS clean-generic clean-libtool \
 
 distclean: distclean-recursive
 	-rm -f $(am__CONFIG_DISTCLEAN_FILES)
-	-rm -rf ./$(DEPDIR) gnu/classpath/$(DEPDIR) gnu/gcj/$(DEPDIR) gnu/gcj/convert/$(DEPDIR) gnu/gcj/io/$(DEPDIR) gnu/gcj/runtime/$(DEPDIR) gnu/gcj/tools/gcj_dbtool/$(DEPDIR) gnu/gcj/util/$(DEPDIR) gnu/gcj/xlib/$(DEPDIR) gnu/java/lang/$(DEPDIR) gnu/java/lang/management/$(DEPDIR) gnu/java/net/$(DEPDIR) gnu/java/net/protocol/core/$(DEPDIR) gnu/java/nio/$(DEPDIR) gnu/java/nio/channels/$(DEPDIR) java/io/$(DEPDIR) java/lang/$(DEPDIR) java/lang/management/$(DEPDIR) java/lang/ref/$(DEPDIR) java/lang/reflect/$(DEPDIR) java/net/$(DEPDIR) java/nio/$(DEPDIR) java/nio/channels/$(DEPDIR) java/text/$(DEPDIR) java/util/$(DEPDIR) java/util/concurrent/atomic/$(DEPDIR) java/util/logging/$(DEPDIR) java/util/zip/$(DEPDIR) sun/misc/$(DEPDIR)
+	-rm -rf ./$(DEPDIR) gnu/classpath/$(DEPDIR) gnu/gcj/$(DEPDIR) gnu/gcj/convert/$(DEPDIR) gnu/gcj/io/$(DEPDIR) gnu/gcj/runtime/$(DEPDIR) gnu/gcj/tools/gcj_dbtool/$(DEPDIR) gnu/gcj/util/$(DEPDIR) gnu/gcj/xlib/$(DEPDIR) gnu/java/lang/$(DEPDIR) gnu/java/lang/management/$(DEPDIR) gnu/java/net/$(DEPDIR) gnu/java/net/protocol/core/$(DEPDIR) gnu/java/nio/$(DEPDIR) gnu/java/nio/channels/$(DEPDIR) java/io/$(DEPDIR) java/lang/$(DEPDIR) java/lang/management/$(DEPDIR) java/lang/ref/$(DEPDIR) java/lang/reflect/$(DEPDIR) java/net/$(DEPDIR) java/nio/$(DEPDIR) java/nio/channels/$(DEPDIR) java/text/$(DEPDIR) java/util/$(DEPDIR) java/util/concurrent/atomic/$(DEPDIR) java/util/logging/$(DEPDIR) java/util/zip/$(DEPDIR) sun/misc/$(DEPDIR) sun/reflect/$(DEPDIR)
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-libtool distclean-local distclean-tags
@@ -9253,7 +9270,7 @@ installcheck-am:
 maintainer-clean: maintainer-clean-recursive
 	-rm -f $(am__CONFIG_DISTCLEAN_FILES)
 	-rm -rf $(top_srcdir)/autom4te.cache
-	-rm -rf ./$(DEPDIR) gnu/classpath/$(DEPDIR) gnu/gcj/$(DEPDIR) gnu/gcj/convert/$(DEPDIR) gnu/gcj/io/$(DEPDIR) gnu/gcj/runtime/$(DEPDIR) gnu/gcj/tools/gcj_dbtool/$(DEPDIR) gnu/gcj/util/$(DEPDIR) gnu/gcj/xlib/$(DEPDIR) gnu/java/lang/$(DEPDIR) gnu/java/lang/management/$(DEPDIR) gnu/java/net/$(DEPDIR) gnu/java/net/protocol/core/$(DEPDIR) gnu/java/nio/$(DEPDIR) gnu/java/nio/channels/$(DEPDIR) java/io/$(DEPDIR) java/lang/$(DEPDIR) java/lang/management/$(DEPDIR) java/lang/ref/$(DEPDIR) java/lang/reflect/$(DEPDIR) java/net/$(DEPDIR) java/nio/$(DEPDIR) java/nio/channels/$(DEPDIR) java/text/$(DEPDIR) java/util/$(DEPDIR) java/util/concurrent/atomic/$(DEPDIR) java/util/logging/$(DEPDIR) java/util/zip/$(DEPDIR) sun/misc/$(DEPDIR)
+	-rm -rf ./$(DEPDIR) gnu/classpath/$(DEPDIR) gnu/gcj/$(DEPDIR) gnu/gcj/convert/$(DEPDIR) gnu/gcj/io/$(DEPDIR) gnu/gcj/runtime/$(DEPDIR) gnu/gcj/tools/gcj_dbtool/$(DEPDIR) gnu/gcj/util/$(DEPDIR) gnu/gcj/xlib/$(DEPDIR) gnu/java/lang/$(DEPDIR) gnu/java/lang/management/$(DEPDIR) gnu/java/net/$(DEPDIR) gnu/java/net/protocol/core/$(DEPDIR) gnu/java/nio/$(DEPDIR) gnu/java/nio/channels/$(DEPDIR) java/io/$(DEPDIR) java/lang/$(DEPDIR) java/lang/management/$(DEPDIR) java/lang/ref/$(DEPDIR) java/lang/reflect/$(DEPDIR) java/net/$(DEPDIR) java/nio/$(DEPDIR) java/nio/channels/$(DEPDIR) java/text/$(DEPDIR) java/util/$(DEPDIR) java/util/concurrent/atomic/$(DEPDIR) java/util/logging/$(DEPDIR) java/util/zip/$(DEPDIR) sun/misc/$(DEPDIR) sun/reflect/$(DEPDIR)
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
