--- a/gcc/lto/Make-lang.in
+++ b/gcc/lto/Make-lang.in
@@ -82,7 +82,7 @@ lto/lto-lang.o: lto/lto-lang.c $(CONFIG_H) coretypes.h debug.h \
 lto/lto.o: lto/lto.c $(CONFIG_H) $(CGRAPH_H) coretypes.h dwarf2.h \
 	$(GGC_H) opts.h $(SYSTEM_H) toplev.h $(TM_H) $(LTO_H)
 lto/lto-elf.o: lto/lto-elf.c $(CONFIG_H) coretypes.h $(SYSTEM_H) \
-	toplev.h $(LTO_H) 
+	toplev.h $(LTO_H) $(LTO_TAGS_H)
 lto/lto-symtab.o: lto/lto-symtab.c $(CONFIG_H) coretypes.h \
 	$(SYSTEM_H) toplev.h $(TREE_H) $(LTO_H) lto/lto-tree.h
 lto-read.o : lto-read.c $(CONFIG_H) $(SYSTEM_H) \
