2006-09-20  Andrew Pinski  <pinskia@physics.uc.edu>
        * gcc/lto/Make-lang.in (lto-read.o): Remove white space before
        the ":" and add "lto/" in front of the name of the object file.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/lto@117107 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/lto/Make-lang.in
+++ b/gcc/lto/Make-lang.in
@@ -85,10 +85,10 @@ lto/lto-elf.o: lto/lto-elf.c $(CONFIG_H) coretypes.h $(SYSTEM_H) \
 	toplev.h $(LTO_H) $(LTO_TAGS_H)
 lto/lto-symtab.o: lto/lto-symtab.c $(CONFIG_H) coretypes.h \
 	$(SYSTEM_H) toplev.h $(TREE_H) $(LTO_H) lto/lto-tree.h
-lto-read.o : lto-read.c $(CONFIG_H) $(SYSTEM_H) \
+lto/lto-read.o: lto/lto-read.c $(CONFIG_H) $(SYSTEM_H) \
 	coretypes.h $(TM_H) toplev.h $(TREE_H) $(EXPR_H) $(FLAGS_H) \
 	$(PARAMS_H) input.h $(VARRAY_H) $(HASHTAB_H) langhooks.h \
 	$(BASIC_BLOCK_H) tree-iterator.h tree-pass.h tree-flow.h \
 	$(CGRAPH_H) $(FUNCTION_H) $(GGC_H) $(DIAGNOSTIC_H) \
 	except.h debug.h $(TIMEVAR_H) $(LTO_TAGS_H) lto-tree-flags.def \
-	lto-tree-tags.def output.h dwarf2asm.h dwarf2out.h 
+	lto-tree-tags.def output.h dwarf2asm.h dwarf2out.h
