PR libgcj/29278: 	* Makefile.in: Rebuilt. 	* Makefile.am ($(generic_header_files)): Depend on gcjh.stamp. 	(gcjh.stamp): New target.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj-eclipse@117521 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -382,8 +382,11 @@ generic_header_files = $(ordinary_header_files) $(xlib_nat_headers)
 
 MYGCJH = gcjh1
 
-$(generic_header_files):
+$(generic_header_files): gcjh.stamp
+
+gcjh.stamp: classpath/lib/compile-classes
 	$(MYGCJH) --cni --all classpath/lib --cmdfile=$(srcdir)/headers.txt
+	echo > gcjh.stamp
 
 inner_nat_headers = java/io/ObjectOutputStream$$PutField.h \
 	java/io/ObjectInputStream$$GetField.h \
